--- a/qml.qrc
+++ b/qml.qrc
@@ -42,5 +42,91 @@
         <file>Burger/Questroom.tif</file>
         <file>Burger/Raspisanie.tif</file>
         <file>Burger/settings.tif</file>
+        <file>Message.qml</file>
+        <file>Userchat.qml</file>
+        <file>Downbar.qml</file>
+        <file>Knijka_malyshka/administr_photo.tif</file>
+        <file>Knijka_malyshka/administration.tif</file>
+        <file>Knijka_malyshka/amphiteatre.tif</file>
+        <file>Knijka_malyshka/arbuz.tif</file>
+        <file>Knijka_malyshka/burger.tif</file>
+        <file>Knijka_malyshka/doctor.tif</file>
+        <file>Knijka_malyshka/elka.tif</file>
+        <file>Knijka_malyshka/filter.tif</file>
+        <file>Knijka_malyshka/knijka_malyshka.tif</file>
+        <file>Knijka_malyshka/konsruirovanie.tif</file>
+        <file>Knijka_malyshka/ozdorovlenie.tif</file>
+        <file>Knijka_malyshka/plyaj.tif</file>
+        <file>Knijka_malyshka/poisk.tif</file>
+        <file>Knijka_malyshka/Vita.tif</file>
+        <file>Knijka_malyshka/voronka_photo.tif</file>
+        <file>Messenger/dobavit`.tif</file>
+        <file>Messenger/poisk.tif</file>
+        <file>Razrabs/C-M.tif</file>
+        <file>Avtorization_registration/nadpis.tif</file>
+        <file>Avtorization_registration/pole_vvoda.png</file>
+        <file>Avtorization_registration/vxod.tif</file>
+        <file>Avtorization_registration/zaregistrirovatsya.tif</file>
+        <file>Cyber_magazine/Apple.tif</file>
+        <file>Cyber_magazine/bilet.tif</file>
+        <file>Cyber_magazine/burger.tif</file>
+        <file>Cyber_magazine/fizika.tif</file>
+        <file>Cyber_magazine/perevesti.tif</file>
+        <file>Cyber_magazine/pole_deneg.tif</file>
+        <file>Cyber_magazine/popolnit`.tif</file>
+        <file>Cyber_magazine/QR_code.tif</file>
+        <file>Cyber_magazine/Sertifikat.tif</file>
+        <file>Cyber_magazine/Tovar.tif</file>
+        <file>Cyber_magazine/zakaz.tif</file>
+        <file>Dialog/burger.tif</file>
+        <file>Dialog/data.tif</file>
+        <file>Dialog/ok.tif</file>
+        <file>Dialog/online.tif</file>
+        <file>Dialog/open_kl.tif</file>
+        <file>Dialog/Otpravit`.tif</file>
+        <file>Dialog/pole_zapisi.tif</file>
+        <file>Dialog/prikrepit`.tif</file>
+        <file>Dialog/sms_.tif</file>
+        <file>Dialog/sms_moi.tif</file>
+        <file>Dialog/vyhod.tif</file>
+        <file>Friends/1.tif</file>
+        <file>Friends/2.tif</file>
+        <file>Friends/3.tif</file>
+        <file>Friends/4.tif</file>
+        <file>Friends/5.tif</file>
+        <file>Friends/6.tif</file>
+        <file>Friends/7.tif</file>
+        <file>Friends/8.tif</file>
+        <file>Friends/9.tif</file>
+        <file>Friends/burger.tif</file>
+        <file>Friends/filter.tif</file>
+        <file>Friends/online.tif</file>
+        <file>Friends/open.tif</file>
+        <file>Friends/poisk.tif</file>
+        <file>Maps/burger.tif</file>
+        <file>Maps/Check_but.tif</file>
+        <file>Maps/date.tif</file>
+        <file>Maps/Mini_check_but.tif</file>
+        <file>Maps/Mini_noCheck_but.tif</file>
+        <file>Maps/NoCheck_but.tif</file>
+        <file>Maps/palochka.tif</file>
+        <file>Maps/Ping.tif</file>
+        <file>Maps/sobytie.tif</file>
+        <file>Maps/vyhod.tif</file>
+        <file>QR_code/photo.tif</file>
+        <file>QR_code/vyhod.tif</file>
+        <file>Questroom/1.tif</file>
+        <file>Questroom/2.tif</file>
+        <file>Questroom/3.tif</file>
+        <file>Questroom/4.tif</file>
+        <file>Questroom/5.tif</file>
+        <file>Questroom/6.tif</file>
+        <file>Questroom/7.tif</file>
+        <file>Questroom/8.tif</file>
+        <file>Questroom/burger.tif</file>
+        <file>Questroom/filter.tif</file>
+        <file>Questroom/lider.tif</file>
+        <file>Questroom/lider_info.tif</file>
+        <file>Questroom/vyhod.tif</file>
     </qresource>
 </RCC>
