добавлен лидерборд, его доделать

--- a/qml.qrc
+++ b/qml.qrc
@@ -140,5 +140,6 @@
         <file>Resourse_v2/2 lot.tif</file>
         <file>Resourse_v2/3 lot.tif</file>
         <file>Resourse_v2/4 lot.tif</file>
+        <file>Leaderboards.qml</file>
     </qresource>
 </RCC>
